# ark-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
ark-cli/: .gitignore  Cargo.toml  README.md  USAGE.md  rustfmt.toml
ark-cli/.github/workflows/: rust.yml
ark-cli/ark-shelf/: 16-720383087
ark-cli/src/: cli.rs  error.rs  index_registrar.rs  main.rs  storage.rs  util.rs
ark-cli/src/commands/: backup.rs  collisions.rs  file.rs  link.rs  list.rs  mod.rs  monitor.rs  render.rs  watch.rs
ark-cli/src/commands/drop/: mod.rs  receive.rs  send.rs
ark-cli/src/commands/file/: append.rs  insert.rs  mod.rs  read.rs  utils.rs
ark-cli/src/commands/link/: create.rs  load.rs  mod.rs  utils.rs
ark-cli/src/commands/storage/: list.rs  mod.rs
ark-cli/src/models/: cli.rs  entry.rs  format.rs  mod.rs  sort.rs  storage.rs
ark-cli/src/parsers/: mod.rs
benches/: compute_bytes_benchmark.rs  index_build_benchmark.rs
crates/fs-atomic-versions/: Cargo.toml
crates/fs-atomic-versions/src/atomic/: file.rs
crates/fs-utils/: Cargo.toml
crates/fs-utils/src/: lib.rs  pdf.rs
data-error/: Cargo.toml
data-error/src/: lib.rs
data-json/: Cargo.toml
data-link/: Cargo.toml
data-link/src/: lib.rs
data-pdf/: Cargo.toml  build.rs
data-resource/: Cargo.toml  README.md
data-resource/benches/: compute_bytes_benchmark.rs  id_creation_benchmarks.rs
data-resource/src/: blake3.rs  crc32.rs  id.rs  lib.rs
dev-hash/: Cargo.toml  README.md
dev-hash/benches/: blake3.rs  crc32.rs  hybrid.rs
dev-hash/src/: blake3.rs  crc32.rs  hybrid.rs  lib.rs
drop-core/: Cargo.toml
drop-core/cli/: Cargo.toml  LICENSE  README.md
drop-core/cli/resources/: bar.txt  baz.txt  foo.txt
drop-core/cli/src/: handshake.rs  lib.rs  main.rs
drop-core/cli/src/tui/: app.rs  mod.rs
drop-core/cli/src/tui/components/: file_browser.rs  mod.rs  qr_code.rs
drop-core/cli/src/tui/pages/: config_page.rs  help_page.rs  main_page.rs  mod.rs  progress_page.rs  receive_page.rs  send_page.rs
drop-core/cli/tests/: integration_tests.rs  network_simulation.rs
drop-core/common/: Cargo.toml
drop-core/common/src/: lib.rs
drop-core/entities/: Cargo.toml
drop-core/entities/src/: data.rs  file.rs  lib.rs  profile.rs
drop-core/exchanges/common/: Cargo.toml
drop-core/exchanges/common/src/: handshake.rs  lib.rs  projection.rs
drop-core/exchanges/receiver/: Cargo.toml
drop-core/exchanges/receiver/benches/: transfer_benchmark.rs
drop-core/exchanges/receiver/src/: lib.rs  receive_files.rs
drop-core/exchanges/receiver/src/ready_to_receive/: handler.rs  mod.rs
drop-core/exchanges/receiver/tests/: buffer_size_tests.rs
drop-core/exchanges/sender/: Cargo.toml
drop-core/exchanges/sender/benches/: transfer_benchmark.rs
drop-core/exchanges/sender/src/: lib.rs  send_files.rs  send_files_to.rs
drop-core/exchanges/sender/src/send_files/: handler.rs
drop-core/exchanges/sender/tests/: buffer_size_tests.rs  integration_buffer_tests.rs
drop-core/main/: Cargo.toml
drop-core/main/src/: main.rs
drop-core/src/: erorr.rs  lib.rs  metadata.rs
drop-core/tui/: Cargo.toml
drop-core/tui/src/: app.rs  backend.rs  layout.rs  lib.rs  main.rs  ready_to_receive_manager.rs  receive_files_manager.rs  send_files_manager.rs  send_files_to_manager.rs
drop-core/tui/src/app/: mod.rs
drop-core/tui/src/apps/: config.rs  file_browser.rs  help.rs  home.rs  mod.rs  ready_to_receive_progress.rs  receive_files.rs  receive_files_progress.rs  send_files.rs  send_files_progress.rs  send_files_to.rs  send_files_to_progress.rs
drop-core/tui/src/components/: confirmation_dialog.rs  file_browser.rs  input_field.rs  mod.rs  qr_code.rs
drop-core/tui/src/pages/: config_page.rs  file_browser.rs  help.rs  help_page.rs  home.rs  main_page.rs  mod.rs  progress_page.rs  receive_page.rs  send_files.rs  send_page.rs
drop-core/tui/src/utilities/: clipboard.rs  helper_footer.rs  mod.rs  qr_renderer.rs
drop-core/uniffi/: Cargo.toml  uniffi.toml
drop-core/uniffi/bindings/android/: .gitignore  build.gradle
drop-core/uniffi/bindings/android/src/main/: AndroidManifest.xml
drop-core/uniffi/bindings/swift/: .gitignore  Package.swift  build-xcframework.sh  generate-bindings.sh
drop-core/uniffi/drop/: Cargo.toml  build.rs
drop-core/uniffi/drop/bindings/android/: build.gradle
drop-core/uniffi/drop/src/: drop.udl  receiver.rs  sender.rs
drop-core/uniffi/drop/src/receiver/: receive_files.rs
drop-core/uniffi/drop/src/sender/: send_files.rs
drop-core/uniffi/src/: drop.udl  lib.rs  receiver.rs  sender.rs
drop-core/uniffi/src/receiver/: ready_to_receive.rs  receive_files.rs
drop-core/uniffi/src/sender/: send_files.rs  send_files_to.rs
fs-atomic-light/: Cargo.toml
fs-atomic-versions/: Cargo.toml
fs-atomic-versions/src/: app_id.rs  errors.rs  file.rs  lib.rs
fs-atomic-versions/src/atomic/: file.rs
fs-cache/: Cargo.toml
fs-cache/src/: cache.rs  lib.rs  lru.rs  memory_limited_storage.rs
fs-index/: Cargo.toml  README.md  build.rs
fs-index/benches/: compute_bytes_benchmark.rs  index_build_benchmark.rs  resource_index_benchmark.rs
fs-index/examples/: index_watch.rs  resource_index.rs
fs-index/src/: id.rs  index.rs  lib.rs  link.rs  pdf.rs  serde.rs  tests.rs  utils.rs  watch.rs
fs-index/src/storage/: meta.rs  prop.rs
fs-metadata/: Cargo.toml
fs-metadata/src/: lib.rs
fs-properties/: Cargo.toml
fs-properties/src/: lib.rs
fs-storage/: Cargo.toml  Makefile  README.md
fs-storage/examples/: cli.rs
fs-storage/src/: FileStorage.h  FileStorage.java  base_storage.rs  btreemap_iter.rs  crdt.rs  file_storage.rs  folder_storage.rs  jni_file_storage.rs  lib.rs  meta.rs  monoid.rs  prop.rs  utils.rs  wrapper_btreemap.rs
fs-storage/src/cli/: read.rs  write.rs
fs-storage/src/jni/: btreemap_iter.rs  file_storage.rs  mod.rs  wrapper_btreemap.rs
fs-storage/tests/: FileStorage.java  FileStorageTest.java  Makefile  SyncStatus.java
integration/: ark-cli-watch.sh
java/: .gitignore  README.md  build.gradle  local.properties  settings.gradle  settings.gradle.kts
rpc/: Cargo.toml  (+1 more)
(+80 files in other folders)
