[workspace]
members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-metadata",
    "fs-properties",
    "fs-index",
    "fs-storage",
    "dev-hash",
    "drop-core/cli",
    "drop-core/uniffi/drop",
]

default-members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-metadata",
    "fs-properties",
    "fs-index",
    "fs-storage",
    "dev-hash",
    "drop-core/cli",
    "drop-core/uniffi/drop",
]

resolver = "2"
