[workspace]
members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-metadata",
    "fs-properties",
    "fs-index",
    "fs-storage",
    "dev-hash",
    "drop-core/entities",
    "drop-core/exchanges/common",
    "drop-core/exchanges/sender",
    "drop-core/exchanges/receiver",
    "drop-core/common",
    "drop-core/cli",
    "drop-core/tui",
    "drop-core/main", 
    "drop-core/uniffi", 
]

default-members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-metadata",
    "fs-properties",
    "fs-index",
    "fs-storage",
    "dev-hash",
    "drop-core/entities",
    "drop-core/exchanges/common",
    "drop-core/exchanges/sender",
    "drop-core/exchanges/receiver",
    "drop-core/common",
    "drop-core/cli",
    "drop-core/tui",
    "drop-core/main",
    "drop-core/uniffi",
]

resolver = "2"
