[package]
name = "ark-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ark-cli"
bench = false

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "3.0.10", features = ["derive"] }
env_logger = "0.9.0"
fs_extra = "1.2.0"
home = "0.5.3"
url = { version = "2.2.2", features = ["serde"] }
serde_json = "1.0.82"
chrono = "0.4.34"
anyhow = "1.0.80"
thiserror = "1.0.57"

data-error = { path = "../data-error" }
data-link = { path = "../data-link" }
data-pdf = { path = "../data-pdf" }
data-resource = { path = "../data-resource" }
fs-atomic-versions = { path = "../fs-atomic-versions" }
fs-metadata = { path = "../fs-metadata" }
fs-properties = { path = "../fs-properties" }
fs-index = { path = "../fs-index" }
fs-storage = { path = "../fs-storage" }
