[package]
name = "data-error"
version = "0.1.0"
edition = "2021"

[lib]
name = "data_error"
crate-type = ["rlib"]
bench = false

[dependencies]
thiserror = "1"
reqwest = { version = "0.11.11", features = [ "json", "rustls-tls" ], default-features = false }
serde_json = "1.0.82"
anyhow = "1"
url = { version = "2.2.2", features = ["serde"] }
