[package]
name = "data-link"
version = "0.1.0"
edition = "2021"

[lib]
name = "data_link"
crate-type = ["rlib"]
bench = false

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
reqwest = { version = "0.11.11", features = [ "json", "rustls-tls" ], default-features = false }
scraper = "0.13.0"
tokio = { version = "1", features = ["full"] }


fs-atomic-light = { path = "../fs-atomic-light" }
fs-atomic-versions = { path = "../fs-atomic-versions" }
fs-storage = { path = "../fs-storage" }
fs-metadata = { path = "../fs-metadata" }
fs-properties = { path = "../fs-properties" }

data-resource = { path = "../data-resource" }
data-error = { path = "../data-error" }


[dev-dependencies]
tempdir = "0.3.7"
# Depending on `dev-hash` for testing
dev-hash = { path = "../dev-hash" }
