[package]
name = "data-resource"
version = "0.1.0"
edition = "2021"

[lib]
name = "data_resource"
crate-type = ["rlib"]
bench = false

[[bench]]
name = "bench_resource_id_creation"
harness = false
path = "benches/id_creation_benchmarks.rs"

[dependencies]
data-error = { path = "../data-error" }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Hash type specefic dependencies
# CRC32
crc32fast = { version = "1.3", optional = true }
# Blake3
blake3 = { version = "1.5", optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
# Benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
anyhow = "1.0"


# Features:
# - `non-cryptographic-hash`: Uses a non-cryptographic hash functions to define `ResourceId`
# - `cryptographic-hash`: Uses a cryptographic hash functions to define `ResourceId`
[features]
# Hash type specefic features:
hash_crc32 = ["crc32fast"]
hash_blake3 = ["blake3", "hex"]

default = ["hash_crc32"]
# default = ["hash_blake3"]
