[package]
name = "drop-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "drop_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
iroh = "0.22.0"
iroh-blobs = "0.22.0"
iroh-base = "0.22.0"
iroh-net = "0.22.0"
anyhow = "1.0.86"
thiserror = "1.0.61"
futures-buffered = "0.2.6"
futures-lite = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
postcard = "1.0.8"
