[package]
name = "fs-cache"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_cache"
crate-type = ["rlib", "cdylib"]
bench = false

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
data-error = { path = "../data-error" }
fs-storage = { path = "../fs-storage"}
lru = "0.12.5"

[dev-dependencies]
tempdir = "0.3.7"
rstest = "0.23"
