[package]
name = "fs-index"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_index"
crate-type = ["rlib"]
bench = false

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
walkdir = "2.3.2"
anyhow = "1.0.58"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
# For the watch API
notify = { version = "6.1", optional = true }
notify-debouncer-full = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }


fs-storage = { path = "../fs-storage" }

data-error = { path = "../data-error" }
data-resource = { path = "../data-resource" }


[features]
watch = ["notify", "notify-debouncer-full", "futures", "async-stream", "tokio"]

[dev-dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
env_logger = "0.11"
# benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
# Depending on `dev-hash` for testing
dev-hash = { path = "../dev-hash" }

[[bench]]
name = "resource_index_benchmark"
harness = false
path = "benches/resource_index_benchmark.rs"
