[package]
name = "fs-metadata"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_metadata"
crate-type = ["rlib"]
bench = false

[dependencies]
serde = { version = "1.0.138", features = ["derive"] }


fs-atomic-versions = { path = "../fs-atomic-versions" }
fs-storage = { path = "../fs-storage" }

data-error = { path = "../data-error" }
data-resource = { path = "../data-resource" }


[dev-dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
tempdir = "0.3.7"
serde_json = "1.0.82"
# Depending on `dev-hash` for testing
dev-hash = { path = "../dev-hash" }
