[package]
name = "fs-properties"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_properties"
crate-type = ["rlib"]
bench = false

[dependencies]
data-error = { path = "../data-error" }
data-json = { path = "../data-json" }
fs-atomic-versions = { path = "../fs-atomic-versions" }
fs-storage = { path = "../fs-storage" }

# For now we are explicitly using the non-cryptographic hash feature
# Later, we should make this a feature of all relevant crates
data-resource = { path = "../data-resource", features = [
    "non-cryptographic-hash",
] }

serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }

[dev-dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
tempdir = "0.3.7"
