[package]
name = "fs-storage"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_storage"
crate-type = ["rlib", "cdylib"]
bench = false

[[example]]
name = "cli"

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
jni = { version = "0.21.1", optional = true }
jnix = { version = "0.5.1", features = ["derive"], optional = true }

data-error = { path = "../data-error" }


[dev-dependencies]
anyhow = "1.0.81"
tempdir = "0.3.7"

[features]
default = ["jni-bindings"]
jni-bindings = ["jni", "jnix"]
