[package]
name = "fs-atomic-versions"
version = "0.1.0"
edition = "2021"


[dependencies]
fs-utils = { path = "../fs-utils" }

log = { version = "0.4.17", features = ["release_max_level_off"] }
crc32fast = "1.3.2"
walkdir = "2.3.2"
anyhow = "1.0.58"
lazy_static = "1.4.0"
canonical-path = "2.0.2"
pathdiff = "0.2.1"
image = "0.24.2"
pdfium-render = { git = "https://github.com/ajrcarey/pdfium-render", rev = "d2559c1", features = [
    "thread_safe",
    "sync",
] }
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
url = { version = "2.2.2", features = ["serde"] }
reqwest = "0.11.11"
scraper = "0.13.0"
tokio = { version = "1", features = ["full"] }
itertools = "0.10.5"
once_cell = "1.16.0"
thiserror = "1"
fastrand = "2"
uuid = { version = "1.6.1", features = ["v4"] }

[dev-dependencies]
tempdir = "0.3.7"
rstest = '0.18.2'
