[package]
name = "arkdrop"
version = "1.0.0"
edition = "2024"
description = "A CLI tool for sending and receiving data"
authors = ["ARK Builders"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ark-Builders/ark-core"
categories = ["command-line-utilities"]
keywords = ["cli", "data-transfer", "tui", "file-transfer", "p2p"]

[lib]
bench = false
name = "arkdrop"

[[bin]]
bench = false
name = "arkdrop"
path = "src/main.rs"

[dependencies]
arkdropx-sender = { path = "../exchanges/sender" }
arkdropx-receiver = { path = "../exchanges/receiver" }  

toml = "0.8"
anyhow = "1.0"
base64 = "0.21"
indicatif = "0.18.0"

uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

ratatui = "0.29.0"
crossterm = "0.29.0"
qrcode = "0.14.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"