[package]
name = "arkdrop-cli"
version = "1.0.0"
edition = "2024"
description = "A CLI tool for sending and receiving files"
authors = ["ARK Builders"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Ark-Builders/ark-core"
categories = ["command-line-utilities"]
keywords = ["cli", "file-transfer", "data-transfer", "p2p"]

[lib]
bench = false
name = "arkdrop_cli"

[[bin]]
bench = false
name = "arkdrop-cli"
path = "src/main.rs"

[dependencies]
arkdrop-common = { path = "../common" }
arkdropx-sender = { path = "../exchanges/sender" }
arkdropx-receiver = { path = "../exchanges/receiver" }

toml = "0.8"
anyhow = "1.0"
base64 = "0.21"
clap = "4.5.47"
uuid = "1.18.1"
tokio = "1.47.1"
qrcode = "0.14.1"
serde = "1.0.219"
indicatif = "0.18.0"


[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
assert_cmd = "2.1.1"
predicates = "3.1.3"
