[package]
name = "arkdrop-uniffi"
version = "1.1.0"
edition = "2024"

[lib]
name = "arkdrop_uniffi"
crate-type = ["cdylib"]
bench = false

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
bench = false

[dependencies]
arkdrop-x-sender = { path = "../exchanges/sender" }
arkdrop-x-receiver = { path = "../exchanges/receiver" }

tokio = "1.44.2"
thiserror = "2.0.12"

uniffi = { version = "0.29.1", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.1", features = [ "build" ] }
