[package]
name = "arkdrop-uniffi"
version = "1.2.0"
edition = "2024"

[lib]
name = "arkdrop_uniffi"
crate-type = ["staticlib", "cdylib"]
bench = false

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
bench = false

[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"
bench = false

[dependencies]
arkdropx-sender = { path = "../exchanges/sender" }
arkdropx-receiver = { path = "../exchanges/receiver" }

tokio = "1.44.2"
thiserror = "2.0.12"

uniffi = { version = "0.29.1", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.1", features = [ "build" ] }
