[package]
name = "dropx-receiver"
version = "1.0.0"
edition = "2024"

[lib]
name = "dropx_receiver"

[dependencies]
drop-entities = { path = "../../entities" }
dropx-common = { path = "../common" }

uuid = "1.16.0"
iroh = "0.91.1"
tokio = "1.44.2"
serde = "1.0.219"
serde_json = "1.0.142"
anyhow = "1.0.98"
iroh-base = "0.91.1"
flate2 = "1.0"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"

[[bench]]
name = "transfer_benchmark"
harness = false
