[package]
name = "sender"
version = "1.1.0"
edition = "2024"

[dependencies]
entities = { path = "../../entities" }
common = { path = "../common" }

rand = "0.9.0"
uuid = "1.16.0"
tokio = "1.46.1"
serde = "1.0.219"
anyhow = "1.0.98"
chrono = "0.4.41"
futures = "0.3.31"
iroh-base = "0.34.1"
serde_json = "1.0.140"
iroh = { version = "0.34.1", default-features = false }
