[package]
name = "dropx-sender"
version = "1.1.0"
edition = "2024"

[dependencies]
drop-entities = { path = "../../entities" }
dropx-common = { path = "../common" }

rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
iroh = "0.91.1"
iroh-base = "0.91.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
flate2 = "1.0"